--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
@@ -120,19 +120,11 @@
   "contact": {
     "header": "Kontaktujte nás",
     "subheader": "Radi vás vypočujeme! Kontaktujte nás pomocou nižšie uvedených informácií.",
-    "addressTitle": "Naša adresa",
-    "addressValue": "Hlavná 123, Poschodie 456\nMestovce, Slovensko 12345",
+
     "emailTitle": "Email",
-    "emailValue": "kontakt@example.com",
+    "emailValue": "info@usetrislovensko.sk",
     "phoneTitle": "Telefón",
-    "phoneValue": "+421 (555) 123-456",
-    "hoursTitle": "Otváracie hodiny",
-    "hoursValue": "Pondelok - Piatok: 9:00 - 18:00\nSobota - Nedeľa: Zatvorené",
-    "formTitle": "Kontaktný formulár",
-    "formName": "Vaše meno",
-    "formEmail": "Váš email",
-    "formMessage": "Vaša správa",
-    "formButton": "Odoslať správu"
+    "phoneValue": "+421 948 020 147"
   },
 
   "team": {
@@ -154,10 +146,6 @@
       {
         "name": "Róbert Jačko",
         "role": "AI inžinier"
-      },
-      {
-        "name": "Eliška",
-        "role": "Právna poradkyňa"
       }
     ]
   },
