feat: Implement EmailJS SDK v4.4.1 with enhanced error handling and improved API methods
- Added new methods for sending emails and forms with validation.
- Introduced EmailJSResponseStatus class for consistent response handling.
- Implemented block list and rate limiting features to prevent abuse.
- Enhanced storage provider functionality for better data management.
- Updated TypeScript definitions for improved type safety.
- Refactored utility functions for better code organization and readability.
- Added comprehensive error handling for headless browsers and blocked emails.
- Updated package.json for versioning and dependency management.

--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
@@ -124,7 +124,23 @@
     "emailTitle": "Email",
     "emailValue": "info@usetrislovensko.sk",
     "phoneTitle": "Phone",
-    "phoneValue": "+421 948 020 147"
+    "phoneValue": "+421 948 020 147",
+
+    "form": {
+      "title": "Send us a message",
+      "name": "Name",
+      "namePlaceholder": "Your full name",
+      "email": "Email Address",
+      "emailPlaceholder": "your@email.com",
+      "subject": "Subject",
+      "subjectPlaceholder": "What is this about?",
+      "message": "Message",
+      "messagePlaceholder": "Tell us more about your inquiry...",
+      "submit": "Send Message",
+      "sending": "Sending...",
+      "success": "Thank you! Your message has been sent successfully.",
+      "error": "Sorry, there was an error sending your message. Please try again."
+    }
   },
 
   "team": {
