feat: Add 'About Us' section to Team page and update translations

--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
@@ -146,6 +146,11 @@
   "team": {
     "header": "Our Team",
     "subheader": "Meet the people who make our mission possible.",
+    "aboutUs": {
+      "header": "About Us",
+      "paragraph1": "We are a group of longtime friends united not only by friendship, but also by a shared passion for technology and improving people's daily lives. We've known each other since high school and later studied together at the Slovak University of Technology in Bratislava. During years of shared study and extracurricular projects, we created a strong team that can complement and motivate each other.",
+      "paragraph2": "Our current goal is to create a practical mobile application that will help people in Slovakia easily track current discounts and promotions in supermarkets. We believe that through technology we can save time and money, while helping people better plan their shopping."
+    },
     "members": [
       {
         "name": "Adam Martiška",
@@ -339,5 +344,3 @@
     ]
   }
 }
-
-
